# autoframe

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  OPEN_SOURCE_CHECKLIST.md  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: autoframe.yml
autoframe/: __init__.py  __main__.py  cli.py  conftest.py
autoframe/core/: client.py  config.py  context.py  logging.py
autoframe/generator/: api_gen.py  base.py  concurrency_gen.py  crud_gen.py  database_gen.py  fault_gen.py  security_gen.py
autoframe/modules/: __init__.py
autoframe/modules/api/: conftest.py  plugin.py  test_crud.py  test_endpoints.py  test_metadata.py  test_schemas.py
autoframe/modules/compatibility/: __init__.py  plugin.py  test_cache_semantics.py  test_http_semantics.py
autoframe/modules/concurrency/: conftest.py  plugin.py  test_concurrent_requests.py  test_race_conditions.py  test_thread_safety.py
autoframe/modules/contract/: __init__.py  plugin.py  test_openapi_contracts.py
autoframe/modules/dast/: __init__.py  plugin.py  test_passive_baseline.py
autoframe/modules/database/: conftest.py  plugin.py  test_connections.py  test_integrity.py  test_queries.py  test_schema_quality.py
autoframe/modules/database_matrix/: __init__.py  conftest.py  plugin.py  test_database_matrix.py
autoframe/modules/documentation/: __init__.py  plugin.py  test_api_docs.py
autoframe/modules/ecosystem/: __init__.py  conftest.py  plugin.py  test_external_tools.py
autoframe/modules/endpoint_matrix/: __init__.py  conftest.py  plugin.py  test_endpoint_matrix.py
autoframe/modules/enterprise/: __init__.py  plugin.py  test_api_contracts.py  test_observability.py  test_scan_quality.py  test_special_endpoints.py
autoframe/modules/fault_tolerance/: conftest.py  plugin.py  test_degradation.py  test_recovery.py  test_timeouts.py
autoframe/modules/files/: __init__.py  plugin.py  test_file_contracts.py
autoframe/modules/observability/: __init__.py  plugin.py  test_runtime_signals.py
autoframe/modules/performance/: collector.py  plugin.py  test_load.py  test_payload_size.py  test_response_time.py  test_stress.py  test_throughput.py
autoframe/modules/security/: conftest.py  plugin.py  test_auth_bypass.py  test_headers.py  test_path_traversal.py  test_sql_injection.py  test_xss.py
autoframe/plugins/: base.py  registry.py
autoframe/reporting/: collector.py  exporters.py  generator.py  models.py  plugin.py
autoframe/scanner/: auth_detector.py  coverage_auditor.py  database_detector.py  endpoint_enricher.py  models.py  openapi_fetcher.py  pipeline.py  project_detector.py  resource_detector.py  schema_data_generator.py  source_parser.py
autoframe/utils/: data_generator.py  helpers.py  metrics.py  retry.py  service_detector.py
config/: default.yaml
tests/: test_report_collector.py  test_resource_detector.py
(+15 files in other folders)
