[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoframe"
version = "2.0.0"
description = "Auto-adaptive testing framework - auto-discovers and tests any Spring Boot or Python project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "AutoFrame contributors" },
]
keywords = [
    "api-testing",
    "spring-boot",
    "python",
    "pytest",
    "automation",
    "security-testing",
    "performance-testing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "PyYAML>=6.0",
    "Jinja2>=3.1",
    "typer>=0.12",
    "rich>=13.0",
    "jsonschema>=4.21",
    "SQLAlchemy>=2.0",
    "pymysql>=1.1",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = ["pytest-mock", "coverage"]

[project.scripts]
autoframe = "autoframe.cli:app"

[project.urls]
Homepage = "https://github.com/chenpengyu3/autoframe"
Repository = "https://github.com/chenpengyu3/autoframe"
Issues = "https://github.com/chenpengyu3/autoframe/issues"

[tool.setuptools.packages.find]
include = ["autoframe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "api: API/functional tests",
    "performance: Performance tests",
    "security: Security tests",
    "database: Database tests",
    "database_matrix: Live database schema matrix tests",
    "ecosystem: Optional external testing ecosystem integration checks",
    "contract: OpenAPI and schema contract tests",
    "concurrency: Concurrency tests",
    "dast: Passive dynamic application security tests",
    "source_quality: Source tree quality and configuration hygiene tests",
    "source_matrix: Source-level dynamic inventory matrix tests",
    "spring_matrix: Spring Boot source-level inventory matrix tests",
    "fault_tolerance: Fault tolerance tests",
    "enterprise: Enterprise-grade scan quality, contract, observability, and special endpoint tests",
    "endpoint_matrix: Dynamically generated endpoint/resource matrix tests",
    "validation: Input validation and malformed request tests",
    "compatibility: HTTP protocol and client compatibility tests",
    "files: Upload/download and binary endpoint contract tests",
    "observability: Runtime health, trace, and operational signal tests",
    "documentation: API documentation and OpenAPI exposure tests",
]
